# maestro-knowledge

./: Dockerfile  README.md  pyproject.toml  start.sh  stop.sh
docs/: TESTING_GUIDE.md
examples/: document_ingestion_example.py
src/converters/: __init__.py  base.py  detector.py  fallback_converter.py  fetcher.py  html_converter.py  markdown_converter.py  pdf_converter.py  registry.py  text_converter.py
src/db/: vector_db_base.py  vector_db_milvus.py  vector_db_weaviate.py
src/maestro_mcp/: server.py
tests/: test_converter_security.py  test_converters.py  test_document_ingestion_integration.py  test_vector_db_milvus.py
tests/e2e/: conftest.py  test_chunking_e2e.py  test_document_ingestion_e2e.py
tests/setup/: milvus_e2e.sh
tools/: tail-logs.sh
