[project]
name = "maestro-knowledge"
version = "0.12.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12.3",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    # Not yet checked/tested with v2
    "openai>=1.109.1,<2.0.0",
    "pydantic>=2.11.7",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "uvicorn>=0.37.0",
    "watchdog>=6.0.0",
    "weaviate-client[agents]>=4.16.5",
    "pymilvus>=2.6.0",
    "pyyaml>=6.0.2",
    "jsonschema>=4.25.0",
    "fastmcp>=2.11.0",
    "six>=1.17.0",
    "sentence-transformers>=2.5.1",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pytest-asyncio>=1.1.0",
]

[tool.ruff.lint]
# Disable E402 (module level import not at top) globally
# This is needed due to our test structure with sys.path.append and warnings.filterwarnings
ignore = ["E402"]
# Enable PEP 585 (list[]) and PEP 604 (str | int) style annotations
select = ["UP006", "UP007", "UP035", "PYI", "ANN", "TCH"]

[tool.pytest.ini_options]
# Suppress expected warnings during testing
filterwarnings = [
    # Suppress protobuf version warnings from Weaviate dependencies
    "ignore::UserWarning:google.protobuf.runtime_version",
    # Suppress our own warning in test_list_collections_exception test
    "ignore::UserWarning:src.db.vector_db_weaviate",
    # Suppress asyncio loop warnings from cancelled database operations - these occur during timeout handling
    "ignore:.*got Future.*attached to a different loop:UserWarning",
]
# Enable async test support with session-scoped event loop for E2E tests
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# Test configuration
testpaths = ["tests"]
python_files = "test_*.py"

# Custom pytest markers
markers = [
    "unit: Unit tests - fast, no external dependencies",
    "integration: Integration tests - components working together with mocked externals", 
    "e2e: End-to-end tests - full environment required",
    "slow: Tests that take >5 seconds",
    "requires_milvus: Tests that require Milvus database running",
    "requires_weaviate: Tests that require Weaviate database running",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "requests-mock>=1.12.1",
    "beautifulsoup4>=4.13.4",
    "ruff>=0.12.7",
    "bandit>=1.8.6",
    "safety>=3.2.9",
    "pre-commit>=4.2.0"
]
